pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constImplicitThis.pkl
open class A {
  a = 1
}

class B extends A {
  const b = a
}

b: B
